# culinary-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-engineer.md  code-reviewer.md  culinary-researcher.md  debugger.md  pixel-artist.md  ui-engineer.md
apps/dashboard/: index.html
infra/: alembic.ini  db.py  docker-compose.yml
infra/alembic/: env.py
infra/alembic/versions/: 7ed9a1b46146_create_pipeline_runs.py  a1b2c3d4e5f6_add_week2_tables.py  a8b9c0d1e2f3_add_observability_tables.py  b7c8d9e0f1a2_add_idea_draft_to_videos.py  c3d4e5f6a7b8_add_video_release_packet_feedback.py  d4e5f6a7b8c9_add_week7_fields.py  e5f6a7b8c9d0_add_video_metrics.py  f6a7b8c9d0e1_add_script_chapters.py
infra/infra/alembic/: env.py
infra/infra/alembic/versions/: 7ed9a1b46146_create_pipeline_runs.py
services/agents/armand/: main.py
services/agents/camille/: main.py
services/agents/colette/: main.py
services/agents/etienne/: main.py
services/agents/julien/: main.py
services/agents/lucien/: main.py
services/agents/marcel/: main.py
services/agents/pierre/: main.py
services/orchestration/: api.py
services/shared/: agent_models.toml  db.py  llm_client.py  llm_tracker.py  models.py  repo.py
tests/: test_agents.py  test_hardening.py  test_observability.py
