[project]
name = "culinary-ai"
version = "0.1.0"
description = "Agentic French cooking content pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.111.0,<0.112.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "pydantic>=2.7.3,<3.0.0",
  "pydantic-settings>=2.3.4,<3.0.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "alembic>=1.13.2,<2.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
  "requests>=2.32.3,<3.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "celery>=5.3.6,<6.0.0",
  "redis>=5.0.4,<6.0.0",
  "langchain>=0.2.0,<0.3.0",
  "langgraph>=0.0.63,<0.1.0",
  "qdrant-client>=1.8.2,<2.0.0",
  "boto3>=1.34.140,<2.0.0",
  "pillow>=10.3.0,<11.0.0",
  "pytesseract>=0.3.10,<0.4.0",
  "anthropic>=0.30.0",
]
[project.optional-dependencies]
dev = [
  "black>=24.4.2,<25.0.0",
  "ruff>=0.5.0,<1.0.0",
  "mypy>=1.10.0,<2.0.0",
  "pytest>=8.2.0,<9.0.0",
]
[tool.poetry]
# Disable packaging the current project to avoid the
# "No file/folder found for package" error during install.
package-mode = false
[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]